Correct run_gradlew and print it

--- a/build.xml
+++ b/build.xml
@@ -36,10 +36,13 @@
         </antcall>
         <property name="run.gradlew" value="${basedir}/${git.rep.name}/run_gradlew${exeEnding}"/>
         <echo file="${run.gradlew}">#!/usr/bin/env bash
-            ./gradlew ${git.rep.cmd}</echo>
+./gradlew ${git.rep.cmd}</echo>
         <antcall target="makeExecutableOnLinux">
             <param name="param.executable" value="${run.gradlew}"/>
         </antcall>
+        <concat>
+            <file name="${run.gradlew}"/>
+        </concat>
     </target>
     <target name="oneRepBuilding" depends="generateRunGradleLin, generateRunGradleWin">
         <property name="stdout" value="${logs.path}/${git.rep.name}-stdout.txt"/>
