Removed extra quotes on Windows

--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,10 @@
     <target name="generateRunGradleWin" if="isWindows" depends="oneRepKotlinVersionChanging">
         <property name="run.gradlew" value="${basedir}/${git.rep.name}/run_gradlew${exeEnding}"/>
         <echo file="${run.gradlew}">call gradlew.bat ${git.rep.cmd}</echo>
+        <replace file="${run.gradlew}" token="&quot;"/>
+        <concat>
+            <file name="${run.gradlew}"/>
+        </concat>
     </target>
     <target name="generateRunGradleLin" unless="isWindows" depends="oneRepKotlinVersionChanging">
         <antcall target="makeExecutableOnLinux">
