--- a/build.xml
+++ b/build.xml
@@ -73,7 +73,8 @@
         <description description="takes git.rep.url.start, git.rep.name and git.rep.cmd as parameters"/>
     </target>
     <target name="commonProperties">
-        <property name="kotlin.version" value="1.2-Beta-eap-28"/>
+        <!--<property name="kotlin.version" value="1.2-Beta-eap-28"/>-->
+        <echo message="The user projects are going to be compiled against Kotlin `${kotlin.version}`"/>
         <property name="changer.version" value="0.0.3-4"/>
         <condition property="isWindows" value="true">
             <os family="windows"/>
